manifests/deploy.yml
apiVersion: v1
kind: Namespace
metadata:
  name: deployment

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  namespace: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: mongo
  template:
    metadata:
      labels:
        name: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:4.2
        ports:
        - name: mango
          containerPort: 27017
      #  volumeMounts:
      #  - mountPath: /data/db
      #    name: data
      #volumes:
      #- name: data
      #  hostPath:
      #    path: /vagrant/data

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: frontend
  template:
    metadata:
      labels:
        name: frontend
    spec:
      containers:
      - name: frontend
        image: registry.gitlab.com/georg3k/coursework-flashcards-k8s-ci-cd/frontend:latest
        ports:
        - name: frontend
          containerPort: 8080
      imagePullSecrets:
        - name: myregistrykey

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: backend
  template:
    metadata:
      labels:
        name: backend
    spec:
      containers:
      - name: backend
        image: registry.gitlab.com/georg3k/coursework-flashcards-k8s-ci-cd/backend:latest
        ports:
        - name: backend
          containerPort: 8080
      imagePullSecrets:
        - name: myregistrykey

---

apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: deployment
  labels:
    name: mango
spec:
  ports:
    - name: mango
      port: 27017
      targetPort: 27017
  selector:
    name: mango

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: deployment
  labels:
    name: frontend
spec:
  ports:
    - name: frontend
      port: 80
      targetPort: 8080
  selector:
    name: frontend

---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: deployment
  labels:
    name: backend
spec:
  ports:
    - name: backend
      port: 80
      targetPort: 8080
  selector:
    name: backend

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: deployment
spec:
  ingressClassName: frontend
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  namespace: deployment
spec:
  ingressClassName: backend
  rules:
  - host: localhost
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
